added styles to vav ul li with display , flex direction, margin and also added styles to nav ul and li by setting background color and styles to ul li a with text decorations, color, margin and font weight

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,3 +34,22 @@ nav ul {
     list-style-type: none;
     padding: 0;
 }
+
+nav ul li {
+    display: flex;
+    flex-direction: column;
+    margin: 1px;
+}
+
+nav ul:hover li:hover {
+    
+    background-color: limegreen;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color:white;
+    margin: auto;
+    font-weight: bolder;
+   
+}
