--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,3 +53,28 @@ nav ul li a {
     font-weight: bolder;
    
 }
+
+nav li{
+    background-color: black;
+    height: 40px;
+    border-style: solid;
+}
+
+
+#hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 100%;
+}
+
+.hero-text h2 p {
+    margin-bottom: 20px; 
+    max-width: 100%;
+}
+
+.hero-image img {
+    max-width: 100%;
+    height: auto;
+}
