--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,3 +78,30 @@ nav li{
     max-width: 100%;
     height: auto;
 }
+
+/* Styles for the featured image section on mobile view */
+
+#featured{
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(41, 57, 57);
+    color:#fff;
+
+}
+
+.article, .article-info h3 p{
+ max-width: 100%;
+}
+
+/* Styles for the about section on mobile view */
+
+#about{
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
