--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,15 +210,25 @@ footer {
     #hero {
         display: flex;
         flex-direction: row;
-        margin:20px;
+        align-items: center;
+        margin-top: 20px;
+        margin-right: 20px;
+       
     }
 
     .hero-text{
+        flex:1
         text-align: center;
-        margin-right:20px;
-        margin-bottom: 25px;
-        
+        margin-right:100px;
+        margin-bottom: 25px;   
     }
+
+    .hero-image{
+        flex: 2;
+        margin: 20px;
+       
+    }
+
     
     #featured{
         display: flex;
