created contact page and added style and added link to contact form

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,7 +160,7 @@ textarea{
     margin-bottom: 20px;
     border-color:white;
 }
-article{
+article, #contact-info{
     padding: 20px;
     border: 1px solid #cccccc;
     display: flex;
