--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,6 +183,11 @@ footer {
     padding: 10px;
 }
 
+/* style for the social media links */
+.social-media{
+    color:lightseagreen;
+}
+
 
 /* Media Query For Desktop Devices */
 
