styled hero image and about to be more responsive

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -245,7 +245,11 @@ footer {
         margin: 20px;
        
     }
+    
+    .main-image{
+        width:500px;
 
+    }
     
     #featured{
         display: flex;
